# annotation-coding-environment

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
brand/: favicon-variants.html  logo-final-18d-v2.html
desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
docs/: landing-page-redesign.md
docs/plans/: 2026-03-06-ace-design.md  2026-03-06-ace-implementation.md  2026-03-07-simplified-ui-design.md  2026-03-07-simplified-ui-implementation.md  2026-03-08-code-reordering-design.md  2026-03-08-header-bar-export-design.md  2026-03-08-header-bar-export-implementation.md  2026-03-09-source-grid-navigator-design.md  landing-page-redesign.md
scripts/: build_sidecar.py  compile-python.sh
spike/: recogito_nicegui.py
src/ace/: __main__.py  app.py
tests/: conftest.py  test_agreement_computer.py  test_agreement_routes.py  test_agreement_verdict.py  test_app.py  test_chord_keys_e2e.py  test_code_view.py  test_codebook_palette.py  test_coding_render.py  test_coding_routes.py  test_cohens_kappa.py  test_e2e_plan_a.py  test_import.py  test_native_picker.py  test_project.py  test_render_colour_css.py  test_slash_commands_e2e.py  test_source_note_routes.py  test_status_helpers.py
tests/e2e/: conftest.py  test_codebook_context_menu.py  test_codebook_drag.py  test_codebook_folder_reorder.py  test_codebook_keyboard.py  test_codebook_zone_indicator.py
tests/fixtures/: make_agreement_files.py
tests/test_db/: test_chord_migration.py  test_connection.py  test_migrations.py  test_schema.py
tests/test_models/: test_annotation.py  test_assignment.py  test_codebook.py  test_codebook_chord.py  test_codebook_folder.py  test_source.py  test_source_note.py
tests/test_pages/: test_render.py
tests/test_services/: test_agreement_computer.py  test_agreement_e2e.py  test_agreement_loader.py  test_agreement_types.py  test_assigner.py  test_chord_assignment.py  test_cloud_detect.py  test_coding_render.py  test_exporter.py  test_icr.py  test_importer.py  test_notes_exporter.py  test_offset.py  test_packager.py  test_text_splitter.py  test_undo.py  test_undo_codebook.py
tmp/: alice.ace  bob.ace  carol.ace
(+106 files in other folders)
