[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ace-coder"
version = "0.1.2"
description = "Lightweight qualitative coding tool with inter-coder reliability"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "jinja2-fragments>=1.5",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2",
    "openpyxl>=3.1",
    "irrCAC>=0.4",
    "krippendorff>=0.7",
]

[project.scripts]
ace = "ace.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
